2009-11-08  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=31098

        Tests that the XSSAuditor prevents loading plugin-based content that is not 
        from the same-origin as the enclosing page.

        * http/tests/security/xssAuditor/object-src-inject-expected.txt: Added.
        * http/tests/security/xssAuditor/object-src-inject.html: Added.
        * http/tests/security/xssAuditor/resources/echo-object-src.pl: Added.

2009-11-08  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Holger Freyther.

        Update texts in test description after test case change in r50579.
        https://bugs.webkit.org/show_bug.cgi?id=31122

        * editing/selection/shrink-selection-after-shift-pagedown-expected.txt:
        * editing/selection/shrink-selection-after-shift-pagedown.html:

2009-11-08  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7363434> Crash inside RenderObject::localToAbsolute
        below FrameView::layout
        https://bugs.webkit.org/show_bug.cgi?id=31093

        * fast/block/positioning/relative-positioned-inline-container-expected.checksum: Added.
        * fast/block/positioning/relative-positioned-inline-container-expected.png: Added.
        * fast/block/positioning/relative-positioned-inline-container-expected.txt: Added.
        * fast/block/positioning/relative-positioned-inline-container.html: Added.

2009-11-07  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Darin Adler.

        Add in missing expectations.

        * platform/mac/fast/forms/input-list-button-size-expected.checksum: Added.
        * platform/mac/fast/forms/input-list-button-size-expected.png: Added.
        * platform/mac/fast/forms/select-dirty-parent-pref-widths-expected.png: Added.
        * platform/mac/fast/text/text-letter-spacing-expected.png: Added.

2009-11-06  Anantanarayanan G Iyengar  <ananta@chromium.org>
